feat: add sticky header

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-instantsearch-hooks-web": "^6.47.2",
+    "react-virtualized": "^9.22.5",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
